--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ env:
     - WP_VERSION=latest WP_MULTISITE=0
     - WP_VERSION=latest WP_MULTISITE=1
 
+branches:
+    only:
+        - master
+        - develop
+
 before_script:
     - bash tests/bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 
