--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,7 @@ branches:
 before_script:
     - bash tests/bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 
+install:
+    - composer install
+
 script: phpunit
