--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ branches:
         - master
         - develop
 
+cache:
+    directories:
+    - vendor
+
 before_script:
     - bash tests/bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 
