Require erusev/parsedown for Markdown parsing.

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
 
     "require": {
         "php": ">=5.5",
-        "psr/log": "^1.0"
+        "psr/log": "^1.0",
+        "erusev/parsedown": "^1.6"
     },
 
     "require-dev": {
